--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vertical",
   "version": "0.1.0",
-  "private": true,
+  "hovepage": "http://Pashua85.github.io/vertical-letters",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predebloy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "4.11.1",
+    "gh-pages": "3.1.0",
     "node-sass": "4.14.1"
   }
 }
